--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <script type="text/javascript" src="https://yastatic.net/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/julianshapiro/velocity/master/velocity.min.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/benhowdle89/touche/master/dist/touche.min.js"></script>
 
 
     <div id="screen">
