--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
         <div class='wnd' id='credits'>
-            арт:<a href='https://vk.com/hodiau'>ДМ</a>, код:<a href='https://vk.com/fakesocacc'>Полиграф</a>
+            арт:<a href='https://vk.com/hodiau'>ДМ</a>, код:<a href='https://vk.com/id300159075'>Eugene</a>
         </div>
     </div>
 
